<resources>
    <string name="app_name">AndroidGroup2</string>
    <string name="salam">salam atl </string>
    <string name="message_here">Message here</string>
    <string name="write_here">Write here</string>
    <string name="save">Save</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="none">None</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="example">Example</string>
    <string name="next">Next</string>
    <string name="full_name">Full Name</string>
    <string name="back">Back</string>
    <string name="first_activity">First Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <string name="drawerOpen">Drawer Open</string>
    <string name="drawerClose">Drawer Close</string>
    <string name="title_activity_new_nav_drawer">NewNavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_post">Create Post</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat password</string>
    <string name="go_to_login">Go to login</string>
</resources>